pihole/manual-config/deployment.yaml
# Deploys a single pihole replica
# Requires secret for the password
#   kubectl \
#     create \
#     secret \
#     generic \
#     pihole-password \
#     --from-literal "WEBPASSWORD=[sumpass]"
#

---
# Define deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  labels:
    app: pihole
  namespace: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
        name: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:latest
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
        imagePullPolicy: Always
        volumeMounts:
        - name: pihole-volume
          mountPath: "/etc/pihole"
        - name: dnsmasq-volume
          mountPath: "/etc/dnsmasq.d"
      volumes:
      - name: pihole-volume
        persistentVolumeClaim:
          claimName: pihole-volume-claim
      - name: dnsmasq-volume
        persistentVolumeClaim:
          claimName: dnsmasq-volume-claim
