pihole/manual-config/cluster-ip-service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: pihole-cluster-ip
  namespace: pihole
spec:
  type: ClusterIP
  selector:
    app: pihole
  ports:
  - port: 8000
    targetPort: 80
    name: pihole-admin
  - port: 53
    targetPort: 53
    protocol: TCP
    name: dns-tcp
  - port: 53
    targetPort: 53
    protocol: UDP
    name: dns-udp
  externalIPs:
  - 192.168.1.177
