pihole/manual-config/deployment-smb.yaml
---
# Define deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
        name: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:latest
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
        imagePullPolicy: Always
        volumeMounts:
        - name: pihole-smb-pihole-volume
          mountPath: "/mnt/storage/pihole"
        - name: pihole-local-dnsmasq-volume
          mountPath: "/mnt/storage/dnsmasq"
      volumes:
      - name: pihole-smb-pihole-volume
        persistentVolumeClaim:
          claimName: pihole-smb-storage-claim
      - name: pihole-local-dnsmasq-volume
        persistentVolumeClaim:
          claimName: pihole-local-dnsmasq-claim

---
apiVersion: v1
kind: Service
metadata:
  name: pihole
spec:
  selector:
    app: pihole
  ports:
  - port: 8000
    targetPort: 80
    name: pihole-admin
  - port: 53
    targetPort: 53
    protocol: TCP
    name: dns-tcp
  - port: 53
    targetPort: 53
    protocol: UDP
    name: dns-udp
  externalIPs:
  - 192.168.1.160
