pihole/manual-config/ingress.yaml
#Untested ingress config
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: pihole.192.168.1.210.nip.io
    http:
      paths:
      - path: /pihole
        pathType: Prefix
        backend:
          service:
            name: pihole-cluster-ip
            port:
              number: 8000
